remove manual trigger endpoints
